--- a/1 - Practice_Exercise_2.ipynb
+++ b/1 - Practice_Exercise_2.ipynb
@@ -9,10 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You entered str is composed of alphabets.\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1 = input(\"Please enter a string\")\n",
+    "check = str1.isalpha()\n",
+    "if check:\n",
+    " print(f\"You entered {str1} is composed of alphabets.\")\n",
+    "else:\n",
+    " print(f\"You entered {str1} is not composed of alphabets.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -25,10 +40,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You entered str123 is composed of both alphabets and numbers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1 = input(\"Please enter a string\")\n",
+    "alpha_flag = False\n",
+    "number_flag = False\n",
+    "\n",
+    "for x in str1:\n",
+    "    if x.isalpha():\n",
+    "        alpha_flag = True\n",
+    "    elif x.isdigit():\n",
+    "        number_flag = True\n",
+    "\n",
+    "if (alpha_flag and number_flag and str1.isalnum()):\n",
+    "    print(f\"You entered {str1} is composed of both alphabets and numbers.\")\n",
+    "else:\n",
+    "    print(f\"You entered {str1} is not composed of both alphabets and numbers.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -39,10 +77,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You entered str123 is composed of both alphabets and numbers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1 = input(\"Please enter a string\")\n",
+    "alpha_flag = False\n",
+    "number_flag = False\n",
+    "\n",
+    "for x in str1:\n",
+    "    if x.isalpha():\n",
+    "        alpha_flag = True\n",
+    "    elif x.isdigit():\n",
+    "        number_flag = True\n",
+    "\n",
+    "if (alpha_flag and number_flag):\n",
+    "    print(f\"You entered {str1} is composed of both alphabets and numbers.\")\n",
+    "else:\n",
+    "    print(f\"You entered {str1} is not composed of both alphabets and numbers.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,10 +114,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You entered str123 is not composed of both alphabets, at least one number, and at least one special character.\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1 = input(\"Please enter a string\")\n",
+    "alpha_flag = False\n",
+    "number_flag = False\n",
+    "special_flag =False\n",
+    "\n",
+    "for x in str1:\n",
+    "    if x.isalpha():\n",
+    "        alpha_flag = True\n",
+    "    elif x.isdigit():\n",
+    "        number_flag = True\n",
+    "    else:\n",
+    "        special_flag=True\n",
+    "\n",
+    "if (alpha_flag and number_flag and special_flag):\n",
+    "    print(f\"You entered {str1} is composed of both alphabets, at least one number, and at least one special character.\")\n",
+    "else:\n",
+    "    print(f\"You entered {str1} is not composed of both alphabets, at least one number, and at least one special character.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +154,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You entered str123 is not composed of both alphabets, at least one number, and at least one special character.\n",
+      "You entered str123! is composed of both alphabets, at least one number, and at least one special character.\n"
+     ]
+    }
+   ],
+   "source": [
+    "check=False\n",
+    "while not check:\n",
+    "    str1 = input(\"Please enter a string\")\n",
+    "    alpha_flag = False\n",
+    "    number_flag = False\n",
+    "    special_flag =False\n",
+    "\n",
+    "    for x in str1:\n",
+    "        if x.isalpha():\n",
+    "            alpha_flag = True\n",
+    "        elif x.isdigit():\n",
+    "            number_flag = True\n",
+    "        else:\n",
+    "            special_flag=True\n",
+    "\n",
+    "    if (alpha_flag and number_flag and special_flag):\n",
+    "        print(f\"You entered {str1} is composed of both alphabets, at least one number, and at least one special character.\")\n",
+    "        check =True\n",
+    "    else:\n",
+    "        print(f\"You entered {str1} is not composed of both alphabets, at least one number, and at least one special character.\")"
+   ]
   }
  ],
  "metadata": {
@@ -89,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
