--- a/2 - pointers_for_exercise_2.ipynb
+++ b/2 - pointers_for_exercise_2.ipynb
@@ -9,11 +9,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 H\n",
+      "1 o\n",
+      "2 w\n",
+      "3 l\n",
+      "4 '\n",
+      "5 s\n",
+      "6  \n",
+      "7 M\n",
+      "8 o\n",
+      "9 v\n",
+      "10 i\n",
+      "11 n\n",
+      "12 g\n",
+      "13  \n",
+      "14 C\n",
+      "15 a\n",
+      "16 s\n",
+      "17 t\n",
+      "18 l\n",
+      "19 e\n"
+     ]
+    }
+   ],
    "source": [
-    "str1 = \"Howl's Moving Castle\"\n"
+    "str1 = \"Howl's Moving Castle\"\n",
+    "for i, v in enumerate(str1):\n",
+    "    print(i, v)\n"
    ]
   },
   {
@@ -25,12 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baa_baa_black_sheep\n"
+     ]
+    }
+   ],
    "source": [
     "some_list = ['Baa', 'baa', 'black', 'sheep']\n",
-    "\n"
+    "separator = \"_\"\n",
+    "result = separator.join(some_list)\n",
+    "print(result)\n"
    ]
   },
   {
@@ -42,21 +81,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sheep\n"
+      "Baa\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "\n",
-    "some_list = ['Baa', 'baa', 'black', 'sheep']\n"
+    "import random\n",
+    "some_list = ['Baa', 'baa', 'black', 'sheep']\n",
+    "word_to_guess = random.choice(some_list)\n",
+    "print(word_to_guess)\n"
    ]
   }
  ],
@@ -76,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
