--- a/3 - non_graded_exercise_2.ipynb
+++ b/3 - non_graded_exercise_2.ipynb
@@ -28,20 +28,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------\n",
+      "Lives remaining: 10\n",
+      "Current word: _ _ _ _\n",
+      "correct guess.\n",
+      "--------------------------------------\n",
+      "Lives remaining: 10\n",
+      "Current word: l _ _ _\n",
+      "Please enter a single letter.\n",
+      "--------------------------------------\n",
+      "Lives remaining: 10\n",
+      "Current word: l _ _ _\n",
+      "correct guess.\n",
+      "--------------------------------------\n",
+      "Lives remaining: 10\n",
+      "Current word: l a _ _\n",
+      "correct guess.\n",
+      "--------------------------------------\n",
+      "Lives remaining: 10\n",
+      "Current word: l a n _\n",
+      "This letter has already been entered before.\n",
+      "--------------------------------------\n",
+      "Lives remaining: 10\n",
+      "Current word: l a n _\n",
+      "correct guess.\n",
+      "--------------------------------------\n",
+      "The guessed word: land\n",
+      "Awesome! You guessed the word correctly.\n",
+      "Thank you for playing. See you next time.\n"
+     ]
+    }
+   ],
    "source": [
     "import random # You need this module to select a word randomly\n",
     "\n",
     "# Create a list of words that the game can choose from and then ask the user to guess \n",
-    "word_list = []\n",
+    "word_list = [\"Alice\",\"in\",\"Wonder\",\"land\"]\n",
     "\n",
     "# Store in this variable a random word from the above word_list\n",
-    "word_to_guess = \n",
+    "word_to_guess = random.choice(word_list)\n",
     "\n",
     "# Complete the rest of the code. You will have to use the different methods you have learned so far. \n",
-    "\n"
+    "guessed_word = ['_'] * len(word_to_guess)\n",
+    "attempts = 10\n",
+    "input_letters = set()\n",
+    "\n",
+    "while attempts > 0:\n",
+    "        print(\"--------------------------------------\")\n",
+    "        print(f\"Lives remaining: {attempts}\")\n",
+    "        print(\"Current word: \"+' '.join(guessed_word))\n",
+    "        letter = input(\"Guess a letter: \")\n",
+    "\n",
+    "        if not letter.isalpha():\n",
+    "            print(\"Invalid Character.\")\n",
+    "            continue\n",
+    "        if  len(letter) != 1:\n",
+    "            print(\"Please enter a single letter.\")\n",
+    "            continue\n",
+    "        if letter.lower() in input_letters:\n",
+    "            print(\"This letter has already been entered before.\")\n",
+    "            continue\n",
+    "        if letter.upper() in input_letters:\n",
+    "            print(\"This letter has already been entered before.\")\n",
+    "            continue\n",
+    "\n",
+    "        input_letters.add(letter)\n",
+    "\n",
+    "        if letter.lower() in word_to_guess or letter.upper() in word_to_guess:\n",
+    "            for index, x in enumerate(word_to_guess):\n",
+    "                if x.lower() == letter.lower():\n",
+    "                    guessed_word[index] = x\n",
+    "                    print(\"correct guess.\")\n",
+    "            if '_' not in guessed_word:\n",
+    "                print(\"--------------------------------------\")\n",
+    "                print(\"The guessed word: \"+ word_to_guess)\n",
+    "                print(f\"Awesome! You guessed the word correctly.\")\n",
+    "                print(\"Thank you for playing. See you next time.\")\n",
+    "                break\n",
+    "        else:\n",
+    "            attempts = attempts - 1\n",
+    "            print(\"Incorrect guess. Try again.\")\n",
+    "if attempts == 0:\n",
+    "    print(\"Thank you for playing. Better luck next time.\")\n"
    ]
   }
  ],
@@ -61,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
